Created Animation heroSection

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ html .mainContainer .tagGetOff {
   text-decoration: none;
 }
 html .mainContainer .tagGetOff .discount {
-  animation: get-off 0.5s linear;
+  animation: getOff 0.5s linear;
 }
 html .mainContainer .tagGetOff .discount .title {
   font-size: 1rem;
@@ -86,7 +86,7 @@ html .mainContainer .tagGetOff .discount .title {
 html .mainContainer .tagGetOff .discount .title:hover {
   background-color: #BC2327;
 }
-@keyframes get-off {
+@keyframes getOff {
   0% {
     transform: translateX(-100%);
   }
@@ -299,13 +299,14 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   justify-content: space-between;
   align-items: center;
   overflow: visible;
-  margin: -200px 0px 100px 0px;
+  margin: -250px 0px 100px 0px;
   padding: 0px 100px;
 }
 .heroSection .heroSectionCentered {
   z-index: 1;
 }
 .heroSection .heroSectionCentered .info {
+  animation: info 0.75s linear;
   text-align: left;
 }
 .heroSection .heroSectionCentered .info .break {
@@ -347,9 +348,38 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   color: #ffffff;
   background-color: #BC2327;
 }
+@keyframes info {
+  0% {
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+  25% {
+    transform: translateX(-15%);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
 .heroSection .laptop {
   width: 60%;
-  padding-top: 100px;
+  padding-top: 50px;
+  animation: laptopSlide 0.75s linear;
+}
+@keyframes laptopSlide {
+  0% {
+    transform: translateY(30%);
+    opacity: 0;
+  }
+  25% {
+    transform: translateY(15%);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
 
 .sectionCreateAccount {
