Update getOffHoddy at Store

--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -86,6 +86,16 @@
             </p>
         </section>
 
+        <!-- Tag GetOff -->
+
+        <section class="tagGetOff">
+            <article class="discount">
+                <label for="cross">
+                    <h2 class="title">Get 25% Off</h2>
+                </label>
+            </article>
+        </section>
+
         <!-- Create Account -->
 
         <section class="sectionCreateAccount">
