--- a/css/main.css
+++ b/css/main.css
@@ -875,6 +875,129 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .containerStore {
   margin: 100px auto 150px;
 }
+.containerStore .tagGetOff {
+  position: fixed;
+  top: 35%;
+  right: 0%;
+  transform: rotate(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  text-decoration: none;
+}
+.containerStore .tagGetOff .discount {
+  animation: getOff 0.5s linear;
+}
+.containerStore .tagGetOff .discount .title {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #ffffff;
+  text-align: center;
+  writing-mode: vertical-rl;
+  text-orientation: right;
+  transform: rotate(180deg);
+  font-weight: 600;
+  cursor: pointer;
+  background-color: #000000;
+  padding: 40px 15px;
+  transition: all 0.3s ease;
+}
+.containerStore .tagGetOff .discount .title:hover {
+  background-color: #BC2327;
+}
+@keyframes getOff {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+.containerStore .getOffHoddy {
+  width: 100%;
+  height: 100%;
+}
+.containerStore .getOffHoddy #cross {
+  display: none;
+}
+.containerStore .getOffHoddy #cross:checked ~ .bannerGetOff {
+  transform: translateY(100%);
+}
+.containerStore .getOffHoddy .bannerGetOff {
+  width: 62vw;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.8980392157);
+  box-shadow: 0 0 6px 4px black;
+  position: fixed;
+  top: -300px;
+  left: 18%;
+  z-index: 8;
+  transform: translateY(300%);
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
+}
+.containerStore .getOffHoddy .bannerGetOff .title {
+  font-size: 4rem;
+  font-family: "Rubik Distressed", cursive;
+  color: #BC2327;
+  margin-top: 20px;
+}
+.containerStore .getOffHoddy .bannerGetOff .crossCloseWhite {
+  width: 25px;
+  position: relative;
+  bottom: 90px;
+  left: 390px;
+  cursor: pointer;
+  z-index: 3;
+}
+.containerStore .getOffHoddy .bannerGetOff .slideGetOff {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 20px;
+  backdrop-filter: blur(10px);
+}
+.containerStore .getOffHoddy .bannerGetOff .slideGetOff .hoddy {
+  padding: 10px;
+}
+.containerStore .getOffHoddy .bannerGetOff .slideGetOff .hoddy img {
+  width: 100%;
+  height: auto;
+}
+.containerStore .getOffHoddy .bannerGetOff .slideGetOff .hoddy h3 {
+  margin-top: 30px;
+  font-size: 1.1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+}
+.containerStore .getOffHoddy .bannerGetOff .slideGetOff .hoddy p {
+  padding: 10px auto;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #d9d9d9;
+}
+.containerStore .getOffHoddy .bannerGetOff::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  backdrop-filter: blur(10px);
+  filter: blur(10px);
+  z-index: -1;
+  border-radius: 10px;
+}
+.containerStore .getOffHoddy .bannerGetOff > * {
+  position: relative;
+}
 .containerStore .bannerShipping {
   width: 100%;
   height: 25px;
