--- a/views/store.html
+++ b/views/store.html
@@ -118,6 +118,51 @@
             </article>
         </section>
 
+        <!-- Tag GetOff -->
+
+        <section class="tagGetOff">
+            <article class="discount">
+                <label for="cross">
+                    <h2 class="title">Get 25% Off</h2>
+                </label>
+            </article>
+        </section>
+
+        <!-- Get 25% Off -->
+
+        <section class="getOffHoddy" id="getOff">
+            <input type="checkbox" id="cross">
+            <label for="cross">
+                <img src="../img/close_Cross_White.svg" alt="Cross Icon" class="crossCloseWhite">
+            </label>
+            <article class="bannerGetOff">
+                <h2 class="title">Get 25% off</h2>
+
+                <div class="slideGetOff">
+                    <div class="hoddy">
+                        <img src="../img/hoddy1.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="../img/hoddy2.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="../img/hoddy3.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="../img/hoddy4.webp" alt="Hoddy skull">
+                        <h3>In-stock</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+
         <!-- Filter -->
 
         <section class="sectionFilter">
