--- a/css/main.css
+++ b/css/main.css
@@ -935,26 +935,26 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   background-color: rgba(0, 0, 0, 0.8980392157);
   box-shadow: 0 0 6px 4px black;
   position: fixed;
-  top: -300px;
+  top: -340px;
   left: 18%;
   z-index: 8;
   transform: translateY(300%);
   overflow: hidden;
   transition: 0.3s ease-in-out;
 }
+.containerStore .getOffHoddy .bannerGetOff label .crossCloseWhite {
+  width: 25px;
+  position: relative;
+  top: 15px;
+  right: 0px;
+  cursor: pointer;
+  z-index: 10;
+}
 .containerStore .getOffHoddy .bannerGetOff .title {
   font-size: 4rem;
   font-family: "Rubik Distressed", cursive;
   color: #BC2327;
   margin-top: 20px;
-}
-.containerStore .getOffHoddy .bannerGetOff .crossCloseWhite {
-  width: 25px;
-  position: relative;
-  bottom: 90px;
-  left: 390px;
-  cursor: pointer;
-  z-index: 3;
 }
 .containerStore .getOffHoddy .bannerGetOff .slideGetOff {
   display: flex;
@@ -2259,6 +2259,91 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 }
 .sectionSignIn .formSignIn .form .ctaToSignIn .toCreateAccount:hover {
   text-decoration: underline;
+}
+
+.getOffHoddy {
+  width: 100%;
+  height: 100%;
+}
+.getOffHoddy #cross {
+  display: none;
+}
+.getOffHoddy #cross:checked ~ .bannerGetOff {
+  transform: translateY(100%);
+}
+.getOffHoddy .bannerGetOff {
+  width: 62vw;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.8980392157);
+  box-shadow: 0 0 6px 4px black;
+  position: fixed;
+  top: -300px;
+  left: 18%;
+  z-index: 8;
+  transform: translateY(300%);
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
+}
+.getOffHoddy .bannerGetOff .title {
+  font-size: 4rem;
+  font-family: "Rubik Distressed", cursive;
+  color: #BC2327;
+  margin-top: 20px;
+}
+.getOffHoddy .bannerGetOff .crossCloseWhite {
+  width: 25px;
+  position: relative;
+  bottom: 90px;
+  left: 390px;
+  cursor: pointer;
+  z-index: 3;
+}
+.getOffHoddy .bannerGetOff .slideGetOff {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 20px;
+  backdrop-filter: blur(10px);
+}
+.getOffHoddy .bannerGetOff .slideGetOff .hoddy {
+  padding: 10px;
+}
+.getOffHoddy .bannerGetOff .slideGetOff .hoddy img {
+  width: 100%;
+  height: auto;
+}
+.getOffHoddy .bannerGetOff .slideGetOff .hoddy h3 {
+  margin-top: 30px;
+  font-size: 1.1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+}
+.getOffHoddy .bannerGetOff .slideGetOff .hoddy p {
+  padding: 10px auto;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #d9d9d9;
+}
+.getOffHoddy .bannerGetOff::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  backdrop-filter: blur(10px);
+  filter: blur(10px);
+  z-index: -1;
+  border-radius: 10px;
+}
+.getOffHoddy .bannerGetOff > * {
+  position: relative;
 }
 
 .footerContainer {
