--- a/scss/_sign_In.scss
+++ b/scss/_sign_In.scss
@@ -96,3 +96,87 @@
         }
     }
 }
+.getOffHoddy{
+    width:100%;
+    height: 100%;
+    #cross{
+        display: none;
+        &:checked ~ .bannerGetOff{
+            transform: translateY(100%);
+        }
+    }
+    .bannerGetOff{
+        width: 62vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10px;
+        background-color:#000000e5;
+        box-shadow: 0 0 6px 4px black;
+        position: fixed;
+        top:-300px;
+        left:18%;
+        z-index: 8;
+        transform: translateY(300%);
+        overflow: hidden;
+        transition: .3s ease-in-out;
+        .title{
+            font-size:4rem;
+            font-family: $fontRubik;
+            color: #BC2327;
+            margin-top:20px;
+        }
+        .crossCloseWhite{
+            width:25px;
+            position: relative;
+            bottom:90px;
+            left:390px;
+            cursor: pointer;
+            z-index: 3;
+        }
+        .slideGetOff{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+            padding: 20px;
+            backdrop-filter: blur(10px);
+            .hoddy{
+                padding:10px;
+                img{
+                    width:100%;
+                    height:auto;
+                }
+                h3{
+                    margin-top: 30px;
+                    font-size:1.1rem;
+                    font-family: $fontJura;
+                    color: #BC2327;
+                }
+                p{
+                    padding: 10px auto;
+                    font-size:1rem;
+                    font-family: $fontJura;
+                    color: #d9d9d9;
+                }
+            }
+        }
+    }
+    .bannerGetOff::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        backdrop-filter: blur(10px);
+        filter: blur(10px);
+        z-index: -1;
+        border-radius: 10px;
+    }
+    .bannerGetOff > * {
+        position: relative;
+    }
+}
