--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -60,25 +60,27 @@
             background-color:#000000e5;
             box-shadow: 0 0 6px 4px black;
             position: fixed;
-            top:-300px;
+            top:-340px;
             left:18%;
             z-index: 8;
             transform: translateY(300%);
             overflow: hidden;
             transition: .3s ease-in-out;
+            label{
+                .crossCloseWhite{
+                    width:25px;
+                    position: relative;
+                    top:15px;
+                    right:0px;
+                    cursor: pointer;
+                    z-index: 10;
+                }
+            }
             .title{
                 font-size:4rem;
                 font-family: $fontRubik;
                 color: #BC2327;
                 margin-top:20px;
-            }
-            .crossCloseWhite{
-                width:25px;
-                position: relative;
-                bottom:90px;
-                left:390px;
-                cursor: pointer;
-                z-index: 3;
             }
             .slideGetOff{
                 display: flex;
