--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -96,6 +96,41 @@
             </article>
         </section>
 
+        <!-- Get 25% Off -->
+
+        <section class="getOffHoddy" id="getOff">
+            <input type="checkbox" id="cross">
+            <article class="bannerGetOff">
+                <label for="cross">
+                    <img src="../img/close_Cross_White.svg" alt="Cross Icon" class="crossCloseWhite">
+                </label>
+                <h2 class="title">Get 25% off</h2>
+                <div class="slideGetOff">
+                    <div class="hoddy">
+                        <img src="../img/hoddy1.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="../img/hoddy2.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="../img/hoddy3.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="../img/hoddy4.webp" alt="Hoddy skull">
+                        <h3>In-stock</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+
         <!-- Create Account -->
 
         <section class="sectionCreateAccount">
