Update background-color ffffff store-cards outfits

--- a/scss/_best_Sellers.scss
+++ b/scss/_best_Sellers.scss
@@ -37,7 +37,8 @@
                     font-family: $fontJura;
                     margin-top: 20px;
                     padding:20px;
-                    background-color: #131313;
+                    background-color: #ffffff;
+                    // background-color: #131313;
                     transform: translateY(110%);
                     transition: transform 0.3s ease;
                     &:hover{
