--- a/css/main.css
+++ b/css/main.css
@@ -814,7 +814,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-family: "Jura", sans-serif;
   margin-top: 20px;
   padding: 20px;
-  background-color: #131313;
+  background-color: #ffffff;
   transform: translateY(110%);
   transition: transform 0.3s ease;
 }
@@ -1060,7 +1060,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-family: "Jura", sans-serif;
   margin-top: 20px;
   padding: 20px;
-  background-color: #131313;
+  background-color: #ffffff;
   transform: translateY(-110%);
   transition: transform 0.3s ease;
 }
