--- a/css/main.css
+++ b/css/main.css
@@ -836,9 +836,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: all 0.3s ease;
 }
 .bestSellers .sectionCard .cardProducts .article .info .linkStore:hover {
-  color: #BC2327;
-  background-color: #D9D9D9;
-  box-shadow: 0 0 4px 2px #BC2327;
+  color: #ffffff;
+  background-color: #000000;
 }
 .bestSellers .sectionCard .cardProducts .article .outFit {
   width: 100%;
@@ -1079,9 +1078,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: all 0.3s ease;
 }
 .containerStore .sectionStore .sectionCard .cardProducts .article .info .linkStore:hover {
-  color: #BC2327;
-  background-color: #D9D9D9;
-  box-shadow: 0 0 4px 2px #BC2327;
+  color: #ffffff;
+  background-color: #000000;
 }
 .containerStore .sectionStore .sectionCard .cardProducts .article .outFit {
   width: 100%;
