Making Place order & Purchase Order

--- a/views/store.html
+++ b/views/store.html
@@ -281,6 +281,17 @@
         </section>
 
         <section class="purchaseOrder">
+            <h2 class="breakaLeg">Break a Leg</h2>
+            <img class="brand" src="../img/skullLogo.svg" alt="Break a Leg brand">
+
+            <article class="confirmation">
+                <p class="done">Your payment was done  successfully</p>
+                <img class="brand" src="../img/cart_Check.svg" alt="Break a Leg brand">
+
+                <p class="number"> Your purchase order number is</p>
+                <p class="number">526896-589</p>
+                <a href="" class="close">Close</a>
+            </article>
 
         </section>
 
