--- a/css/main.css
+++ b/css/main.css
@@ -1029,6 +1029,97 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
     transform: translateX(0%);
   }
 }
+.containerStore .purchaseOrder {
+  width: 40%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 10px;
+  background-color: rgba(243, 243, 243, 0.1098039216);
+  box-shadow: 0 0 4px 2px rgb(82, 82, 82);
+  position: fixed;
+  top: -87%;
+  left: 30%;
+  z-index: 8;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  transform: translateY(150%);
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
+}
+.containerStore .purchaseOrder #orderCross {
+  display: none;
+}
+.containerStore .purchaseOrder label .crossCloseWhite {
+  width: 25px;
+  position: absolute;
+  top: -15px;
+  right: -250px;
+  cursor: pointer;
+}
+.containerStore .purchaseOrder .breakaLeg {
+  color: #BC2327;
+  font-size: 1.8rem;
+  font-family: "Rubik Distressed", cursive;
+}
+.containerStore .purchaseOrder .brand {
+  width: 35px;
+}
+.containerStore .purchaseOrder .confirmation {
+  width: 60%;
+  text-align: center;
+  margin: 20px auto;
+  padding: 20px 40px;
+  background-color: #ffffff;
+  border-radius: 10px;
+}
+.containerStore .purchaseOrder .confirmation .done, .containerStore .purchaseOrder .confirmation .order, .containerStore .purchaseOrder .confirmation .number, .containerStore .purchaseOrder .confirmation .close {
+  font-family: "Jura", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+.containerStore .purchaseOrder .confirmation .done {
+  color: #BC2327;
+}
+.containerStore .purchaseOrder .confirmation .number {
+  color: #BC2327;
+  padding: -10px;
+}
+.containerStore .purchaseOrder .confirmation .cartCheck {
+  width: 50px;
+}
+.containerStore .purchaseOrder .confirmation .close {
+  width: 100%;
+  height: 40px;
+  color: #ffffff;
+  background-color: #000000;
+  text-decoration: none;
+  border: 1px solid #000000;
+  transition: all 0.3s ease;
+}
+.containerStore .purchaseOrder .confirmation .close:hover {
+  background-color: #ffffff;
+  color: #000000;
+  border: 1px solid #000000;
+}
+.containerStore .purchaseOrder::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5058823529);
+  backdrop-filter: blur(25px);
+  filter: blur(10px);
+  z-index: -1;
+  border-radius: 10px;
+}
+.containerStore .purchaseOrder > * {
+  position: relative;
+}
 .containerStore .sectionStore .sectionCard .cardProducts {
   width: 100%;
   height: auto;
