--- a/views/store.html
+++ b/views/store.html
@@ -281,18 +281,19 @@
         </section>
 
         <section class="purchaseOrder">
+            <input type="checkbox" id="orderCross">
+            <label for="orderCross">
+                <img src="../img/close_Cross_White.svg" alt="Cross Icon" class="crossCloseWhite">
+            </label>
             <h2 class="breakaLeg">Break a Leg</h2>
             <img class="brand" src="../img/skullLogo.svg" alt="Break a Leg brand">
-
             <article class="confirmation">
                 <p class="done">Your payment was done  successfully</p>
-                <img class="brand" src="../img/cart_Check.svg" alt="Break a Leg brand">
-
-                <p class="number"> Your purchase order number is</p>
+                <img class="cartCheck" src="../img/cart_Check.svg" alt="Break a Leg brand">
+                <p class="order"> Your purchase order number is</p>
                 <p class="number">526896-589</p>
-                <a href="" class="close">Close</a>
+                <button href="" class="close">Close</button>
             </article>
-
         </section>
 
         <!-- WhishList -->
