Added for Label

--- a/views/store.html
+++ b/views/store.html
@@ -280,7 +280,7 @@
 
         </section>
 
-        <section class="purchaseOrder">
+        <!-- <section class="purchaseOrder">
             <input type="checkbox" id="orderCross">
             <label for="orderCross">
                 <img src="../img/close_Cross_White.svg" alt="Cross Icon" class="crossCloseWhite">
@@ -294,7 +294,7 @@
                 <p class="number">526896-589</p>
                 <button href="" class="close">Close</button>
             </article>
-        </section>
+        </section> -->
 
         <!-- WhishList -->
 
