--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,16 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: scale(103%);
   filter: drop-shadow(0 0 10px #696061);
 }
+.header .menuIcons ul .wishHeadLine .wishlistIcon, .header .menuIcons ul .wishHeadLine .cartIcon, .header .menuIcons ul .cartShop .wishlistIcon, .header .menuIcons ul .cartShop .cartIcon {
+  cursor: pointer;
+  margin: 0px 5px;
+  transform: scale(100%);
+  transition: transform 0.3s ease-in-out;
+}
+.header .menuIcons ul .wishHeadLine .wishlistIcon:hover, .header .menuIcons ul .wishHeadLine .cartIcon:hover, .header .menuIcons ul .cartShop .wishlistIcon:hover, .header .menuIcons ul .cartShop .cartIcon:hover {
+  transform: scale(103%);
+  filter: drop-shadow(0 0 10px #696061);
+}
 .header .menuSide {
   width: 20vw;
   height: 100vh;
@@ -1285,7 +1295,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   overflow: hidden;
   box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
-  transform: translate(-100%);
+  transform: translate(-105%);
   transition: 0.3s ease-in-out;
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross {
@@ -1352,6 +1362,136 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   background-color: #ffffff;
   border: 1px solid #000000;
   font-weight: 600;
+}
+.containerStore #cart {
+  display: none;
+}
+.containerStore #cart:checked ~ .sectionShop {
+  transform: translate(0%);
+}
+.containerStore .sectionShop {
+  width: 30vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
+  z-index: 10;
+  padding-top: 60px;
+  transform: translate(105%);
+  transition: 0.3s ease-in-out;
+}
+.containerStore .sectionShop .menuCart .cartShop .closeCross {
+  width: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 35px;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.containerStore .sectionShop .menuCart .cartShop .closeCross:hover {
+  transform: rotate(270deg);
+}
+.containerStore #wishlistSide {
+  display: none;
+}
+.containerStore #wishlistSide:checked ~ .sectionWishlist {
+  transform: translate(0%);
+}
+.containerStore .sectionWishlist {
+  width: 25vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
+  z-index: 10;
+  padding-top: 60px;
+  transform: translate(105%);
+  transition: 0.3s ease-in-out;
+}
+.containerStore .sectionWishlist .wishHeadLine .closeCross {
+  width: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 35px;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.containerStore .sectionWishlist .wishHeadLine .closeCross:hover {
+  transform: rotate(270deg);
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 0px auto;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wishlistWord {
+  width: inherit;
+  font-size: 1.3rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 0px;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wish .category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wish .category .titleWishlist {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 15px 0px;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .itemProduct {
+  width: 15%;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description {
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description .price {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+}
+.containerStore .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description .icons img {
+  width: 20px;
 }
 
 .newArrivals {
