--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -422,7 +422,7 @@
             }
             .menuFilter{
                 width:20vw;
-                height: 100vh;
+                height:100vh;
                 display:flex;
                 position: fixed;
                 top:0;
@@ -435,7 +435,7 @@
                 overflow: hidden;
                 box-shadow: 0 0 10px 6px #070707;
                 z-index: 10;
-                transform: translate(-100%);
+                transform: translate(-105%);
                 transition: .3s ease-in-out;
                 label{
                     .closeCross{
@@ -507,161 +507,158 @@
             }
         }
     }
+    #cart{
+        display: none;
+        &:checked ~ .sectionShop{
+            transform:translate(0%);
+        }
+    }
+    .sectionShop{
+        width:30vw;
+        height: 100vh;
+        display:flex;
+        position: fixed;
+        top:0;
+        right:0;
+        z-index: 10px;
+        flex-direction: column;
+        justify-content:flex-start;
+        align-items: flex-start;
+        background-color: #ffffff;
+        overflow: hidden;
+        box-shadow: 0 0 10px 6px #070707;
+        z-index: 10;
+        padding-top: 60px;
+        transform: translate(105%);
+        transition: .3s ease-in-out;
+        .menuCart{
+            .cartShop{
+                .closeCross{
+                    width:15px;
+                    cursor: pointer;
+                    position: absolute;
+                    top:20px;
+                    left:35px;
+                    transform: rotate(0deg);
+                    transition: all 0.3s ease-in-out;
+                    &:hover{
+                        transform: rotate(270deg);
+                    }
+                }
+            }
+        }
+    }
 
     // Checkout this code
 
-    // .sectionShop{
-    //     .menuCart{
-    //         width:30vw;
-    //         height: 100vh;
-    //         display:flex;
-    //         position: fixed;
-    //         top:0;
-    //         right:0;
-    //         z-index: 10px;
-    //         flex-direction: column;
-    //         justify-content:flex-start;
-    //         align-items: flex-start;
-    //         background-color: #ffffff;
-    //         overflow: hidden;
-    //         box-shadow: 0 0 10px 6px #070707;
-    //         z-index: 10;
-    //         padding-top: 60px;
-    //         transform: translate(-100%);
-    //         transition: .3s ease-in-out;
-
-    //     }
-
-    // }
-
-
-
-    // Checkout this code
-
-    // .sectionWhishList{
-    //     width:25vw;
-    //     height: 100vh;
-    //     display:flex;
-    //     position: fixed;
-    //     top:0;
-    //     right:0;
-    //     z-index: 10px;
-    //     flex-direction: column;
-    //     justify-content:flex-start;
-    //     align-items: flex-start;
-    //     background-color: #ffffff;
-    //     overflow: hidden;
-    //     box-shadow: 0 0 10px 6px #070707;
-    //     z-index: 10;
-    //     padding-top: 60px;
-    //     transform: translate(100%);
-    //     transition: .3s ease-in-out;
-    //     .whishHeadLine{
-    //         .closeCross{
-    //             width:15px;
-    //             cursor: pointer;
-    //             position: absolute;
-    //             top:20px;
-    //             left:35px;
-    //             transform: rotate(0deg);
-    //             transition: all 0.3s ease-in-out;
-    //             &:hover{
-    //                 transform: rotate(270deg);
-    //             }
-    //         }
-
-    //     }
-    //     .menuWhishList{
-    //         .choiceWhishList{
-    //             width: 80%;
-    //             display: flex;
-    //             flex-direction:column;
-    //             justify-content: space-between;
-    //             align-items:flex-start;
-    //             margin: 0px auto;
-    //             .whishListWord{
-    //                 width: inherit;
-    //                 font-size: 1.3rem;
-    //                 font-family: $fontJura;
-    //                 color:#BC2327;
-    //                 font-weight: 600;
-    //                 margin:0px ;
-    //             }
-    //             .whish{
-    //                 .category{
-    //                     display: flex;
-    //                     flex-direction: row;
-    //                     justify-content: space-between;
-    //                     align-items: flex-start;
-    //                     padding: 20px 0px;
-    //                     border-bottom: 1px solid #e4e4e4;
-    //                     .titleWhishList{
-    //                         font-size: 1rem;
-    //                         font-family: $fontJura;
-    //                         color:#BC2327;
-    //                         font-weight: 600;
-    //                         margin: 15px 0px;
-    //                     }
-    //                 }
-    //                 .whishList{
-    //                     .blockProduct{
-    //                         display: flex;
-    //                         flex-direction: row;
-    //                         justify-content: space-between;
-    //                         align-items: center;
-    //                         padding: 20px 0px;
-    //                         border-bottom: 1px solid #e4e4e4;
-    //                         .itemProduct{
-    //                             width:15%;
-    //                         }
-    //                         .description{
-    //                             display: flex;
-    //                             flex-direction: column;
-    //                             margin-left:-40px;
-    //                             .price{
-    //                                 font-size: 1rem;
-    //                                 font-family: $fontJura;
-    //                                 color:#BC2327;
-    //                                 font-weight: 600;
-    //                             }
-    //                             .icons{
-    //                                 img{
-    //                                     width:20px;
-    //                                 }
-    //                             }
-    //                         }
-    //                     }
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
+    #wishlistSide{
+        display: none;
+        &:checked ~ .sectionWishlist{
+            transform:translate(0%);
+        }
+    }
+    .sectionWishlist{
+        width:25vw;
+        height: 100vh;
+        display:flex;
+        position: fixed;
+        top:0;
+        right:0;
+        z-index: 10px;
+        flex-direction: column;
+        justify-content:flex-start;
+        align-items: flex-start;
+        background-color: #ffffff;
+        overflow: hidden;
+        box-shadow: 0 0 10px 6px #070707;
+        z-index: 10;
+        padding-top: 60px;
+        transform: translate(105%);
+        transition: .3s ease-in-out;
+        .wishHeadLine{
+            .closeCross{
+                width:15px;
+                cursor: pointer;
+                position: absolute;
+                top:20px;
+                left:35px;
+                transform: rotate(0deg);
+                transition: all 0.3s ease-in-out;
+                &:hover{
+                    transform: rotate(270deg);
+                }
+            }
+        }
+        .menuWishlist{
+            .choiceWishlist{
+                width: 80%;
+                display: flex;
+                flex-direction:column;
+                justify-content: space-between;
+                align-items:flex-start;
+                margin: 0px auto;
+                .wishlistWord{
+                    width: inherit;
+                    font-size: 1.3rem;
+                    font-family: $fontJura;
+                    color:#BC2327;
+                    font-weight: 600;
+                    margin:0px ;
+                }
+                .wish{
+                    .category{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: flex-start;
+                        padding: 20px 0px;
+                        border-bottom: 1px solid #e4e4e4;
+                        .titleWishlist{
+                            font-size: 1rem;
+                            font-family: $fontJura;
+                            color:#BC2327;
+                            font-weight: 600;
+                            margin: 15px 0px;
+                        }
+                    }
+                    .wishlist{
+                        .blockProduct{
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: space-between;
+                            align-items: center;
+                            padding: 20px 0px;
+                            border-bottom: 1px solid #e4e4e4;
+                            .itemProduct{
+                                width:15%;
+                            }
+                            .description{
+                                display: flex;
+                                flex-direction: column;
+                                margin-left:-40px;
+                                .price{
+                                    font-size: 1rem;
+                                    font-family: $fontJura;
+                                    color:#BC2327;
+                                    font-weight: 600;
+                                }
+                                .icons{
+                                    img{
+                                        width:20px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 
-// .header{
-//     .menuIcons{
-//         ul{
-//             #whishListSide{
-//                 display: none;
-//                 &:checked ~ .menuWhishList{
-//                     transform: translate(-100%);
-//                 }
-//             }
-//             .whishHeadLine{
-//                 li{
-//                     .icon{
-//                         cursor: pointer;
-//                         margin: 0px 5px;
-//                         transform: scale(100%);
-//                         transition: transform 0.3s ease-in-out;
-//                         &:hover{
-//                             transform: scale(103%);
-//                             filter:drop-shadow(0 0 10px #696061);
-//                         }
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
+
+
+
+
+
