Update cart menu

--- a/views/store.html
+++ b/views/store.html
@@ -224,11 +224,62 @@
 
         <input id="cart" type="checkbox">
         <section class="sectionShop">
-            <nav class="menuCart">
+            <div class="menuCart">
                 <label for="cart" class="cartShop">
                     <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                 </label>
-            </nav>
+                <nav class="menuCartlist">
+                    <div class="choiceCartlist">
+                        <h3 class="cartlistWord">WhishList</h3>
+                        <div class="wish">
+                            <article class="category">
+                                <h3 class="titleCartlist">Item</h3>
+                                <h3 class="titleCartlist">Pricing</h3>
+                                <h3 class="titleCartlist">Whish</h3>
+                            </article>
+                            <article class="cartlist">
+                                <div class="blockProduct">
+                                    <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
+                                    <div class="description">
+                                        <p class="price">$499</p>
+                                        <div class="icons">
+                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                        </div>
+                                    </div>
+                                    <img class="itemCartlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
+                                </div>
+                            </article>
+                            <article class="cartlist">
+                                <div class="blockProduct">
+                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
+                                    <div class="description">
+                                        <p class="price">$499</p>
+                                        <div class="icons">
+                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                        </div>
+                                    </div>
+                                    <img class="itemCartlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
+                                </div>
+                            </article>
+                            <article class="cartlist">
+                                <div class="blockProduct">
+                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
+                                    <div class="description">
+                                        <p class="price">$499</p>
+                                        <div class="icons">
+                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                        </div>
+                                    </div>
+                                    <img class="itemCartlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </section>
 
         <section class="placeOrder">
