--- a/views/store.html
+++ b/views/store.html
@@ -231,7 +231,7 @@
                 <nav class="menuCartlist">
                     <div class="choiceCartlist">
                         <h3 class="cartlistWord">My cart</h3>
-                        <div class="wish">
+                        <div class="cart">
                             <article class="category">
                                 <h3 class="titleCartlist">Item</h3>
                                 <h3 class="titleCartlist">Pricing</h3>
