--- a/css/main.css
+++ b/css/main.css
@@ -1341,6 +1341,23 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-weight: 600;
   margin: 15px 0px;
 }
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #424242;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelThree, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelThree, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelThree, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelThree {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceThree, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceThree, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceThree, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceOne, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceTwo, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceThree {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter {
   width: 90%;
   padding: 10px 20px;
@@ -1431,7 +1448,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-weight: 600;
   margin: 15px 0px;
 }
-.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .blockProduct {
+.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -1439,22 +1456,27 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   padding: 20px 0px;
   border-bottom: 1px solid #e4e4e4;
 }
-.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .blockProduct .itemProduct {
+.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .itemProduct {
   width: 15%;
 }
-.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .blockProduct .description {
+.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description {
   display: flex;
   flex-direction: column;
-  margin-left: -40px;
 }
-.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .blockProduct .description .price {
+.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .price {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
 }
-.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .blockProduct .description .icons img {
+.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .icons img {
   width: 20px;
+}
+.containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .total {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
 }
 .containerStore #wishlistSide {
   display: none;
