--- a/views/store.html
+++ b/views/store.html
@@ -219,7 +219,7 @@
 
                             </article>
                         </div>
-                        <input class="btnFilter" type="submit" placeholder="Filter">
+                        <button class="btnFilter">Filter</button>
                     </div>
                 </nav>
             </article>
@@ -284,14 +284,18 @@
                                     <input type="number" id="quantity" name="quantity" min="1" value="0">
                                     <p class="total">$499</p>
                             </article>
-                            <article class="outcome">
-                                <p class="price">Shipping........................00</p>
-                                <p class="price">Discount 25%..................$374</p>
-                                <h3 class="price">Total.......................$1122</h3>
-                            </article>
-                            <button class="checkOut">Secure checkout</button>
+
                         </div>
                     </div>
+                    <div class="outcomeCard">
+                        <article class="outcome">
+                            <p class="shipping">Shipping..............................<span>00</span></p>
+                            <p class="discount">Discount 25%........................<span>$374</span></p>
+                            <p class="total">Total...........................<span>$1122</span></p>
+                        </article>
+                        <button class="btnCheckout">Secure checkout</button>
+                    </div>
+
                 </nav>
             </div>
         </section>
