--- a/css/main.css
+++ b/css/main.css
@@ -1393,7 +1393,6 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 10px;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -1401,7 +1400,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   overflow: hidden;
   box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
-  padding-top: 60px;
+  padding-top: 30px;
   transform: translate(0%);
   transition: 0.3s ease-in-out;
 }
@@ -1418,12 +1417,18 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: rotate(270deg);
 }
 .containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist {
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   margin: 0px auto;
+  padding: 0px 10px;
+  height: 380px;
+  overflow: scroll;
+  position: fixed;
+  top: 60px;
+  left: 20px;
 }
 .containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist .cartlistWord {
   width: inherit;
@@ -1476,6 +1481,52 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   color: #BC2327;
+  font-weight: 600;
+}
+.containerStore .sectionShop .menuCart .menuCartlist .outcomeCard {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: absolute;
+  bottom: 0px;
+  left: 20px;
+}
+.containerStore .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .shipping, .containerStore .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .discount, .containerStore .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .total {
+  margin: 2px;
+  width: inherit;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #424242;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-between;
+}
+.containerStore .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .total {
+  color: #BC2327;
+  font-weight: 700;
+}
+.containerStore .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout {
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #ffffff;
+  border: 1px solid transparent;
+  background-color: #070707;
+  transition: all 0.3s ease;
+}
+.containerStore .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout:hover {
+  color: #070707;
+  background-color: #ffffff;
+  border: 1px solid #000000;
   font-weight: 600;
 }
 .containerStore #wishlistSide {
