--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -537,7 +537,6 @@
         position: fixed;
         top:0;
         right:0;
-        z-index: 10px;
         flex-direction: column;
         justify-content:flex-start;
         align-items: flex-start;
@@ -545,7 +544,7 @@
         overflow: hidden;
         box-shadow: 0 0 10px 6px #070707;
         z-index: 10;
-        padding-top: 60px;
+        padding-top: 30px;
         transform: translate(0%);
         transition: .3s ease-in-out;
         .menuCart{
@@ -565,12 +564,18 @@
             }
             .menuCartlist{
                 .choiceCartlist{
-                    width: 80%;
+                    width: 90%;
                     display: flex;
                     flex-direction:column;
                     justify-content: space-between;
                     align-items:flex-start;
                     margin: 0px auto;
+                    padding: 0px 10px;
+                    height: 380px;
+                    overflow: scroll;
+                    position: fixed;
+                    top:60px;
+                    left:20px;
                     .cartlistWord{
                         width: inherit;
                         font-size: 1.3rem;
@@ -628,6 +633,55 @@
                                 color:#BC2327;
                                 font-weight: 600;
                             }
+                        }
+                    }
+                }
+                .outcomeCard{
+                    width: 70%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: flex-end;
+                    position:absolute;
+                    bottom:0px;
+                    left:20px;
+                    .outcome{
+                        .shipping, .discount, .total{
+                            margin: 2px;
+                            width: inherit;
+                            font-size: 1rem;
+                            font-family: $fontJura;
+                            color:#424242;
+                            font-weight: 600;
+                            display: flex;
+                            justify-content: space-between;
+                            // background-color: #707070;
+                        }
+                        .total{
+                            color:#BC2327;
+                            font-weight: 700;
+                        }
+                    }
+                    .btnCheckout{
+                        width: 100%;
+                        padding: 10px 20px;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        margin:20px auto;
+                        font-size: 1rem;
+                        font-family: $fontJura;
+                        font-weight: 600;
+                        color: #ffffff;
+                        border: 1px solid transparent;
+                        background-color: #070707;
+                        transition: all 0.3s ease;
+                        &:hover{
+                            color: #070707;
+                            background-color: #ffffff;
+                            border:1px solid #000000;
+                            font-weight: 600;
                         }
                     }
                 }
