--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -641,7 +641,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
-                    align-items: flex-end;
+                    align-items: flex;
                     position:absolute;
                     bottom:0px;
                     left:20px;
