--- a/views/store.html
+++ b/views/store.html
@@ -289,9 +289,9 @@
                     </div>
                     <div class="outcomeCard">
                         <article class="outcome">
-                            <p class="shipping">Shipping..............................<span>00</span></p>
-                            <p class="discount">Discount 25%........................<span>$374</span></p>
-                            <p class="total">Total...........................<span>$1122</span></p>
+                            <p class="shipping">Shipping<span>$00</span></p>
+                            <p class="discount">Discount 25%<span>$374</span></p>
+                            <p class="total">Total<span>$1122</span></p>
                         </article>
                         <button class="btnCheckout">Secure checkout</button>
                     </div>
